# cleansys

./: .gitignore  README.md  demo.tape  main.py  openmemory.md  pyproject.toml  requirements.txt  vhs_config.json
.cursor/rules/: code-standards.mdc  context7.mdc  mcp-compass.mdc  module-rules.mdc  openmemory.mdc  project-context.mdc  safety-rules.mdc  scope-control.mdc  testing-guide.mdc
.github/workflows/: ci.yml  vhs-update.yml
docs/: devguide.md  digital-declutter-scope.md  digital-declutter-userflow.md  project-naming.md  project-overview-tr.md  readme.md  task-prompts.md  tasks.md  techstack.md  userflow.md
scripts/: generate_demo_tape.py
src/: __init__.py  analyzer.py  interface.py  operations.py  scanner.py  size_parser.py
tests/: test_analyzer.py  test_interface.py  test_main.py  test_operations.py  test_scanner.py  test_size_parser.py
